testsuite/tests/module/mod10.hs
-- !!! Exporting non-existent datatype transparently
module M(T(K1)) where
x = 'a' -- dummy definition to get round a separate bug
